--- a/allim/allimApp/templates/index.html
+++ b/allim/allimApp/templates/index.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allim</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     {% load static %}
     <link rel="stylesheet" href="{% static 'allimApp/css/index.css' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'allimApp/img/favicon.png' %}">
 </head>
 
 <body>
     <div class="container custom-rounded-container">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary custom-navbar">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary  custom-navbar">
             <div class="container-fluid">
                 <!-- Logo -->
                 <a class="navbar-brand me-4" href="#">
@@ -52,9 +53,10 @@
                 </div>
             </div>
         </nav>
+
         <div class="student-txt">
             <img src="{% static 'allimApp/img/homepagegirl.png' %}" class="img-fluid" alt="Student">
-        
+
             <div class="about-container">
                 <p class="about-us">
                     Allim connects you with expert tutors to help you master any subject.
@@ -62,11 +64,10 @@
                 <button type="button" class="btn btn-light text-btn">Browse Courses</button>
             </div>
         </div>
-        
         <div class="d-grid gap-2 d-md-block custom-buttons">
             <button class="btn btn-light shadow-btn" id="First-btn" type="button">Reviews</button>             
             <button class="btn btn-light shadow-btn" id="Second-btn" type="button">Become a Tutor</button> 
-            <button class="btn btn-light shadow-btn"  type="button">Browse Sessions</button> 
+            <button class="btn btn-light shadow-btn" id="third-btn" type="button">Browse Sessions</button> 
             <div class="fade-shadow"></div>
         
         <!-- <h1>test</h1>
