--- a/allim/allimApp/templates/student_dasboard.html
+++ b/allim/allimApp/templates/student_dasboard.html
@@ -27,7 +27,7 @@
         
         <div class="col">
             <div class="card h-100">
-                <img src="https://via.placeholder.com/300x150.png?text=Physics+Basics" class="card-img-top" alt="Physics Basics">
+                <img src="/Users/id/Desktop/Allim/allim/allimApp/templates/download (1).jpeg" class="card-img-top" alt="Physics Basics">
                 <div class="card-body">
                     <h5 class="card-title">Physics Basics</h5>
                     <p class="card-text">Learn the fundamentals of physics.</p>
