Login&registration(Front-end)

--- a/allim/allimApp/static/allimApp/css/index.css
+++ b/allim/allimApp/static/allimApp/css/index.css
@@ -165,7 +165,7 @@ body {
 }  */
 
 #First-btn{
-    box-shadow: -13px -16px 1626px 163px #e1f0fc;     
+    /* box-shadow: -13px -16px 1626px 163px #e1f0fc;      */
 } 
 
 .custom-buttons .btn{
