--- a/allim/allimApp/templates/index.html
+++ b/allim/allimApp/templates/index.html
@@ -41,13 +41,13 @@
                             <a class="nav-link" href="#">Become a Tutor</a>
                         </li>
                         <li class="nav-item mx-2">
-                            <a class="nav-link" href="#">Login</a>
+                            <a class="nav-link" href="login">Login</a>
                         </li>
                         <li class="nav-item mx-2">
                             <span class="text-muted">/</span>
                         </li>
                         <li class="nav-item mx-2">
-                            <a class="nav-link fw-bold" href="#">Signup</a>
+                            <a class="nav-link fw-bold" href="register">Signup</a>
                         </li>
                     </ul>
                 </div>
