--- a/allim/allimApp/templates/login.html
+++ b/allim/allimApp/templates/login.html
@@ -1,38 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'allimApp/css/login.css' %}">
 </head>
-<body class="bg-light">
-    <div class="container py-5">
-        <div class="row mb-5">
-            
-            <div class="col-md-6 m-auto">
-                <h2>Login</h2>
-                <form action="/login" method="post">
-                    {%csrf_token%}
-                    <div class="mb-3">
-                        <label for="emailLogin" class="form-label" >Email</label>
-                        <input type="email" class="form-control" id="emailLogin" name="email">
+
+<body>
+
+    <section class="vh-100">
+        <div class="container py-5 h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col col-xl-10">
+                    <div class="card" style="border-radius: 1rem;">
+                        <div class="row g-0">
+                            <div class="col-md-6 col-lg-5 d-none d-md-block">
+                                <img src="{% static 'allimApp/img/side-img.png' %}" alt="login form" class="img-fluid"
+                                    style="border-radius: 1rem 0 0 1rem;" />
+
+                            </div>
+                            <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                                <div class="card-body p-4 p-lg-5 text-black">
+
+                                    <form>
+                                        <div class="login-form">
+                                            <div class="d-flex align-items-center mb-3 pb-1 custom-logo">
+                                                <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+                                                <span class="h1 fw-bold mb-0"><img
+                                                        src="{% static 'allimApp/img/Logo.png' %}" alt="Logo"
+                                                        style="height: 120px; width: auto; "> </span>
+                                            </div>
+
+                                            <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your
+                                                account</h5>
+
+
+
+                                            <div data-mdb-input-init class="form-outline mb-4">
+                                                <label class="form-label" for="form2Example17">Email address</label>
+                                                <input type="email" id="form2Example17"
+                                                    class="form-control form-control-lg" />
+                                            </div>
+
+
+                                            <div data-mdb-input-init class="form-outline mb-4">
+                                                <label class="form-label" for="form2Example27">Password</label>
+                                                <input type="password" id="form2Example27"
+                                                    class="form-control form-control-lg" />
+                                            </div>
+                                            <div class="mb-3">
+                                                <label class="form-label d-block">You are a:</label>
+                                                <div class="form-check form-check-inline">
+                                                    <input class="form-check-input" type="radio" name="you_are"
+                                                        id="teacher" value="teacher">
+                                                    <label class="form-check-label" for="teacher">Teacher</label>
+                                                </div>
+                                                <div class="form-check form-check-inline">
+                                                    <input class="form-check-input" type="radio" name="you_are"
+                                                        id="student" value="student">
+                                                    <label class="form-check-label" for="student">Student</label>
+                                                </div>
+                                            </div>
+
+                                            <div class="pt-1 mb-4">
+                                                <button data-mdb-button-init data-mdb-ripple-init
+                                                    class="btn btn-lg btn-block login-btn" type="button">Login</button>
+                                            </div>
+
+                                            <a class="small text-muted" href="#!">Forgot password?</a>
+                                            <p class="mb-5 pb-lg-2" style="color: #2a4d61;">Don't have an account? <a
+                                                    href="register" style="color: #2a4d61;">Register here</a></p>
+                                            <a href="#!" class="small text-muted">Terms of use.</a>
+                                            <a href="#!" class="small text-muted">Privacy policy</a>
+
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="mb-3">
-                        <label for="passwordLogin" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="passwordLogin" name="password">
-                    </div>
-                    <div class="mb-3">
-                        <label for="you-are" class="form-label">You are a:</label>
-                        <input type="radio"  id="teacher" name="you_are" value="teacher">
-                        <label for="teacher" class="form-label">Teacher</label>
-                        <input type="radio"  id="student" name="you_are" value="student">
-                        <label for="student" class="form-label">Student</label>
-                    </div>
-                    <input type="submit" class="btn btn-success" value="Log In">
-                </form>
-            </div>
-        </div>
+                </div>
+    </section>
     </div>
+
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+        crossorigin="anonymous"></script>
+
 </body>
+
 </html>
