--- a/allim/allimApp/templates/login.html
+++ b/allim/allimApp/templates/login.html
@@ -41,15 +41,15 @@
 
 
                                             <div data-mdb-input-init class="form-outline mb-4">
-                                                <label class="form-label" for="form2Example17">Email address</label>
-                                                <input type="email" id="form2Example17"
+                                                <label class="form-label" for="emailLogin">Email address</label>
+                                                <input type="email" id="emailLogin"
                                                     class="form-control form-control-lg" />
                                             </div>
 
 
                                             <div data-mdb-input-init class="form-outline mb-4">
-                                                <label class="form-label" for="form2Example27">Password</label>
-                                                <input type="password" id="form2Example27"
+                                                <label class="form-label" for="passwordLogin">Password</label>
+                                                <input type="password" id="passwordLogin"
                                                     class="form-control form-control-lg" />
                                             </div>
                                             <div class="mb-3">
