--- a/allim/allimApp/static/allimApp/css/registration.css
+++ b/allim/allimApp/static/allimApp/css/registration.css
@@ -13,7 +13,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    min-height: 720vh !important;
     padding: 1rem;
 }
 
@@ -33,8 +33,7 @@ body {
     border-radius: 30px;
     background-color: #f5faff;
     padding: 2rem;
-
-    max-width: 1000px;
+    max-width: 720px !important;
     width: 100%;
     gap: 2rem;
     flex-wrap: wrap;
@@ -51,9 +50,9 @@ body {
 .img-fluid {
     width: 100%;
     height: 100%;
-    max-width: 500px;
+    /* max-height: 920px !important; */
     border-radius: 20px;
-    object-fit:  cover;
+    object-fit:  cover ;
     filter: blur(px);
 }
 
@@ -64,4 +63,12 @@ body {
     flex-direction: column;
     justify-content: center;
 }
+
+.is-valid {
+    border-color: #198754;
+}
+.is-invalid {
+    border-color: #dc3545;
+}
+
 
