--- a/allim/allimApp/templates/registration.html
+++ b/allim/allimApp/templates/registration.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{% static 'allimApp/css/registration.css' %}">
 </head>
 
+<body>
 <section class="vh-100">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
@@ -17,14 +18,15 @@
                 <div class="card" style="border-radius: 1rem;">
                     <div class="row g-0">
                         <div class="col-md-6 col-lg-5 d-none d-md-block">
-                            <img src="{% static 'allimApp/img/side-img.png' %}" alt="login form" class="img-fluid"
+                            <img src="{% static 'allimApp/img/reg-side-img.png' %}" alt="login form" class="img-fluid"
                                 style="border-radius: 1rem 0 0 1rem;" />
 
                         </div>
                         <div class="col-md-6 col-lg-7 d-flex align-items-center">
                             <div class="card-body p-4 p-lg-5 text-black">
 
-                                <form>
+                                <form action="Reg_form" method="post">
+                                    {% csrf_token %}
                                     <div class="d-flex align-items-center mb-3 pb-1 custom-logo">
                                         <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
                                         <span class="h1 fw-bold mb-0"><img src="{% static 'allimApp/img/Logo.png' %}"
@@ -35,31 +37,35 @@
                                     <div>
                                         <label for="firstName" class="form-label ">First Name</label>
                                         <div data-mdb-input-init class="form-outline mb-4">
-                                            <input type="text" class="form-control  form-control-lg" id="firstName"
-                                                name="first_name">
+                                            <input type="text" class="form-control  form-control-lg" id="firstName" name="first_name">
+                                            <div id="firstNameFeedback" class="form-text text-danger"></div>
                                         </div>
 
                                         <div data-mdb-input-init class="form-outline mb-4">
-                                            <label for="lastname" class="form-label">Last name</label>
-                                            <input type="text" class="form-control  form-control-lg" id="lastname"
-                                                name="lastname">
+                                            <label for="last_name" class="form-label">Last name</label>
+                                            <input type="text" class="form-control  form-control-lg" id="last_name"
+                                                name="last_name">
+                                            <div id="lastNameFeedback" class="form-text text-danger"></div>
                                         </div>
 
                                         <div data-mdb-input-init class="form-outline mb-4">
-                                            <label class="form-label" for="emailReg">Email address</label>
-                                            <input type="email" id="emailReg"
+                                            <label class="form-label" for="email">Email address</label>
+                                            <input type="email" id="email" name="email"
                                                 class="form-control form-control-lg" />
+                                                <div id="emailFeedback" class="form-text"></div>
                                         </div>
 
                                         <div data-mdb-input-init class="form-outline mb-4">
                                             <label class="form-label" for="passwordReg">Password</label>
-                                            <input type="password" id="passwordReg"
+                                            <input type="password" id="passwordReg" name="password"
                                                 class="form-control form-control-lg" />
+                                                <div id="passwordFeedback" class="form-text text-danger"></div>
+
                                         </div>
 
                                         <div data-mdb-input-init class="form-outline mb-4">
                                             <label class="form-label" for="confirmPassword">Comfirm Password</label>
-                                            <input type="password" id="confirmPassword"
+                                            <input type="password" id="confirmPassword" name="password"
                                                 class="form-control form-control-lg" />
                                         </div>
 
@@ -67,18 +73,18 @@
                                             <label class="form-label d-block">You are a:</label>
                                             <div class="form-check form-check-inline">
                                                 <input class="form-check-input" type="radio" name="you_are" id="teacher"
-                                                    value="teacher">
+                                                    name="specialization">
                                                 <label class="form-check-label" for="teacher">Teacher</label>
                                             </div>
                                             <div class="form-check form-check-inline">
                                                 <input class="form-check-input" type="radio" name="you_are" id="student"
-                                                    value="student">
+                                                    name="specialization">
                                                 <label class="form-check-label" for="student">Student</label>
                                             </div>
                                         </div>
 
                                         <div class="pt-1 mb-4">
-                                            <button data-mdb-button-init data-mdb-ripple-init
+                                            <button type="submit" data-mdb-button-init data-mdb-ripple-init
                                                 class="btn btn-lg btn-block login-btn" type="button">Register</button>
                                         </div>
                                         <p class="mb-5 pb-lg-2" style="color: #2a4d61;">Do you have an account? <a
@@ -103,7 +109,9 @@
 <!-- 22 -->
 </div>
 </div>
+<script src="{% static 'allimApp/js/registration.js' %}"></script>
 </body>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
     crossorigin="anonymous"></script>
