--- a/allim/allimApp/templates/registration.html
+++ b/allim/allimApp/templates/registration.html
@@ -72,13 +72,11 @@
                                         <div class="mb-3">
                                             <label class="form-label d-block">You are a:</label>
                                             <div class="form-check form-check-inline">
-                                                <input class="form-check-input" type="radio" name="you_are" id="teacher"
-                                                    name="specialization">
+                                                <input class="form-check-input" type="radio" name="you_are" id="teacher" value="teacher">
                                                 <label class="form-check-label" for="teacher">Teacher</label>
                                             </div>
                                             <div class="form-check form-check-inline">
-                                                <input class="form-check-input" type="radio" name="you_are" id="student"
-                                                    name="specialization">
+                                                <input class="form-check-input" type="radio" name="you_are" id="student" value="student">
                                                 <label class="form-check-label" for="student">Student</label>
                                             </div>
                                         </div>
