--- a/allim/allimApp/templates/student_dashboard.html
+++ b/allim/allimApp/templates/student_dashboard.html
@@ -8,10 +8,10 @@
 <body>
 
 <div class="container py-5">
-    <h2 class="text-center mb-4">{{ student.name }}'s Dashboard</h2>
+    <h2 class="text-center mb-4">{{ student.first_name }}'s Dashboard</h2>
 
     <div class="text-center mb-4">
-        <a href="{% url 'all_courses' %}" class="btn btn-primary">+ Add Course</a>
+        <a href="all_courses" class="btn btn-primary">+ Add Course</a>
     </div>
 
     <div class="row row-cols-1 row-cols-md-3 g-4">
