--- a/allim/allimApp/templates/teacher_dashboard.html
+++ b/allim/allimApp/templates/teacher_dashboard.html
@@ -11,7 +11,7 @@
     <h1 class="text-center mb-4">Welcome, {{ teacher.name }}</h1>
 
     <div class="text-center mb-4">
-        <a href="{% url 'add_course_page' %}" class="btn btn-primary">+ Add New Course</a>
+        <a href="/add_course_page " class="btn btn-primary">+ Add New Course</a>
     </div>
 
     {% if courses %}
