--- a/allim/allimApp/templates/registration.html
+++ b/allim/allimApp/templates/registration.html
@@ -65,7 +65,7 @@
 
                                         <div data-mdb-input-init class="form-outline mb-4">
                                             <label class="form-label" for="confirmPassword">Comfirm Password</label>
-                                            <input type="password" id="confirmPassword" name="password"
+                                            <input type="password" id="confirmPassword" name="confirm-password"
                                                 class="form-control form-control-lg" />
                                         </div>
 
@@ -80,7 +80,13 @@
                                                 <label class="form-check-label" for="student">Student</label>
                                             </div>
                                         </div>
-
+                                        {% if messages %}
+                                        <ul class="messages">
+                                            {% for message in messages %}
+                                            <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
+                                            {% endfor %}
+                                        </ul>
+                                        {% endif %}
                                         <div class="pt-1 mb-4">
                                             <button type="submit" data-mdb-button-init data-mdb-ripple-init
                                                 class="btn btn-lg btn-block login-btn" type="button">Register</button>
@@ -95,13 +101,6 @@
                     </div>
                 </div>
 </section>
-{% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-    {% endfor %}
-</ul>
-{% endif %}
 </form>
 </div>
 <!-- 22 -->
