--- a/allim/allimApp/templates/teacher_dashboard.html
+++ b/allim/allimApp/templates/teacher_dashboard.html
@@ -13,28 +13,27 @@
     <div class="w-64 bg-[#0f2e52] text-white p-6">
       <h1 class="text-3xl font-bold mb-8">Allim</h1>
       <nav class="flex flex-col gap-4">
-        <a href="{% url 'dashboard' %}" class="bg-[#2e5583] p-2 rounded text-white">Dashboard</a>
-        <a href="{% url 'create_course' %}" class="hover:text-gray-300">Create Course</a>
-        <a href="{% url 'students' %}" class="hover:text-gray-300">Students</a>
-        <a href="{% url 'profile' %}" class="hover:text-gray-300">Profile</a>
-        <a href="{% url 'logout' %}" class="hover:text-gray-300">Logout</a>
+        <a href="" class="bg-[#2e5583] p-2 rounded text-white">Dashboard</a>
+        <a href="/teacher/create_course" class="hover:text-gray-300">Create Course</a>
+        <a href="" class="hover:text-gray-300">Students</a>
+        <a href="" class="hover:text-gray-300">Profile</a>
+        <a href="/logout" class="hover:text-gray-300">Logout</a>
       </nav>
     </div>
 
     <!-- Main Content -->
     <div class="flex-1 p-8 overflow-auto">
       <div class="flex items-center justify-between mb-6">
-        <h2 class="text-4xl font-bold">Dashboard</h2>
-        <a href="{% url 'create_course' %}" class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700">Create Course</a>
+        <h2 class="text-4xl font-bold">{{teacher.first_name}}'s Dashboard</h2>
       </div>
 
       <h3 class="text-2xl font-semibold mb-4">Your Courses</h3>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-8">
         {% for course in courses %}
         <div class="bg-white p-4 rounded shadow">
-          <h4 class="text-lg font-semibold">{{ course.title }}</h4>
+          <h4 class="text-lg font-semibold">{{ course.course_name }}</h4>
           <p class="text-gray-500 text-sm">{{ course.description }}</p>
-          <p class="text-sm mt-2 text-gray-600">Enrollments {{ course.enrollments }}</p>
+          <!-- <p class="text-sm mt-2 text-gray-600">Enrollments {{ course.enrollments }}</p> -->
         </div>
         {% empty %}
         <p>No courses available.</p>
