--- a/allim/allimApp/templates/edit_student_profile.html
+++ b/allim/allimApp/templates/edit_student_profile.html
@@ -13,10 +13,10 @@
     <div class="w-64 bg-[#0f2e52] text-white p-6">
       <h1 class="text-3xl font-bold mb-8">Allim</h1>
       <nav class="flex flex-col gap-4">
-        <a href="{% url 'student_dashboard' %}" class="hover:text-gray-300">Dashboard</a>
-        <a href="{% url 'view_all_courses' %}" class="hover:text-gray-300">Add Course</a>
-        <a href="{% url 'student_profile' %}" class="hover:text-gray-300">Profile</a>
-        <a href="{% url 'logout' %}" class="hover:text-gray-300">Logout</a>
+        <a href="" class="hover:text-gray-300">Dashboard</a>
+        <a href="" class="hover:text-gray-300">Add Course</a>
+        <a href="" class="hover:text-gray-300">Profile</a>
+        <a href="" class="hover:text-gray-300">Logout</a>
       </nav>
     </div>
 
