--- a/allim/allimApp/templates/profile.html
+++ b/allim/allimApp/templates/profile.html
@@ -13,12 +13,12 @@
     <div class="w-64 bg-[#0f2e52] text-white p-6">
       <h1 class="text-3xl font-bold mb-8">Allim</h1>
       <nav class="flex flex-col gap-4">
-        <a href="{% url 'dashboard' %}" class="hover:text-gray-300">Dashboard</a>
-        <a href="{% url 'my_courses' %}" class="hover:text-gray-300">My Courses</a>
-        <a href="{% url 'create_course' %}" class="hover:text-gray-300">Create Course</a>
-        <a href="{% url 'students' %}" class="hover:text-gray-300">Students</a>
-        <a href="{% url 'profile' %}" class="bg-[#2e5583] p-2 rounded text-white">Profile</a>
-        <a href="{% url 'logout' %}" class="hover:text-gray-300">Logout</a>
+        <a href="" class="hover:text-gray-300">Dashboard</a>
+        <a href="" class="hover:text-gray-300">My Courses</a>
+        <a href="" class="hover:text-gray-300">Create Course</a>
+        <a href="" class="hover:text-gray-300">Students</a>
+        <a href="" class="bg-[#2e5583] p-2 rounded text-white">Profile</a>
+        <a href="" class="hover:text-gray-300">Logout</a>
       </nav>
     </div>
 
