--- a/allim/allimApp/templates/add_course.html
+++ b/allim/allimApp/templates/add_course.html
@@ -14,9 +14,8 @@
       <h1 class="text-3xl font-bold mb-8">Allim</h1>
       <nav class="flex flex-col gap-4">
         <a href="/teacher/dashboard" class="hover:text-gray-300">Dashboard</a>
-        <a href="" class="bg-[#2e5583] p-2 rounded text-white">Create Course</a>
-        <a href="" class="hover:text-gray-300">Students</a>
-        <a href="" class="hover:text-gray-300">Profile</a>
+        <a href="/teacher/create_course" class="bg-[#2e5583] p-2 rounded text-white">Create Course</a>
+        <a href="/teacher_profile" class="hover:text-gray-300">Profile</a>
         <a href="/logout" class="hover:text-gray-300">Logout</a>
       </nav>
     </div>
