--- a/allim/allimApp/templates/profile.html
+++ b/allim/allimApp/templates/profile.html
@@ -13,12 +13,10 @@
     <div class="w-64 bg-[#0f2e52] text-white p-6">
       <h1 class="text-3xl font-bold mb-8">Allim</h1>
       <nav class="flex flex-col gap-4">
-        <a href="" class="hover:text-gray-300">Dashboard</a>
-        <a href="" class="hover:text-gray-300">My Courses</a>
-        <a href="" class="hover:text-gray-300">Create Course</a>
-        <a href="" class="hover:text-gray-300">Students</a>
-        <a href="" class="bg-[#2e5583] p-2 rounded text-white">Profile</a>
-        <a href="" class="hover:text-gray-300">Logout</a>
+        <a href="/teacher/dashboard" class="hover:text-gray-300">Dashboard</a>
+        <a href="/teacher/create_course" class="hover:text-gray-300">Create Course</a>
+        <a href="/teacher_profile" class="bg-[#2e5583] p-2 rounded text-white">Profile</a>
+        <a href="/logout" class="hover:text-gray-300">Logout</a>
       </nav>
     </div>
 
@@ -29,21 +27,16 @@
       <div class="bg-white p-6 rounded-lg shadow w-full md:w-1/2">
         <div class="mb-4">
           <label class="block text-gray-700 font-semibold mb-1">Name:</label>
-          <p class="text-gray-900">{{ user.name }}</p>
+          <p class="text-gray-900">{{teacher.first_name}} {{teacher.last_name}}</p>
         </div>
 
         <div class="mb-4">
           <label class="block text-gray-700 font-semibold mb-1">Email:</label>
-          <p class="text-gray-900">{{ user.email }}</p>
-        </div>
-
-        <div class="mb-4">
-          <label class="block text-gray-700 font-semibold mb-1">Role:</label>
-          <p class="text-gray-900">{{ user.role }}</p>
+          <p class="text-gray-900">{{teacher.email}}</p>
         </div>
 
         <div class="mt-6">
-          <a href="{% url 'edit_profile' %}" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Edit Profile</a>
+          <a href="/edit_teacher_profile_page" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Edit Profile</a>
         </div>
       </div>
     </div>
