--- a/allim/allimApp/templates/profile_student.html
+++ b/allim/allimApp/templates/profile_student.html
@@ -13,10 +13,10 @@
     <div class="w-64 bg-[#0f2e52] text-white p-6">
       <h1 class="text-3xl font-bold mb-8">Allim</h1>
       <nav class="flex flex-col gap-4">
-        <a href="" class="hover:text-gray-300">Dashboard</a>
-        <a href="" class="hover:text-gray-300">Add Course</a>
-        <a href="" class="bg-[#2e5583] p-2 rounded text-white">Profile</a>
-        <a href="" class="hover:text-gray-300">Logout</a>
+        <a href="/student/dashboard" class="hover:text-gray-300">Dashboard</a>
+        <a href="/enroll_course" class="hover:text-gray-300">Add Course</a>
+        <a href="/student_profile" class="bg-[#2e5583] p-2 rounded text-white">Profile</a>
+        <a href="/logout" class="hover:text-gray-300">Logout</a>
       </nav>
     </div>
 
@@ -35,9 +35,10 @@
         
         <!-- Edit Profile Button -->
         <div class="mt-6">
-          <a href="{% url 'edit_student_profile' %}" class="bg-[#2e5583] text-white px-4 py-2 rounded hover:bg-[#24486d]">
-            Edit Profile
-          </a>
+          <form action="/edit-profile-page" method="post">
+            {% csrf_token %}
+            <button type="submit" class="bg-[#2e5583] text-white px-4 py-2 rounded hover:bg-[#24486d]">Edit Profile</button>
+        </form>
         </div>
       </div>
     </div>
