--- a/allim/allimApp/templates/student_dasboard.html
+++ b/allim/allimApp/templates/student_dasboard.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Allim Student Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  
 </head>
 <body class="bg-gray-100 font-sans">
   <div class="flex h-screen">
@@ -20,12 +22,17 @@
       </nav>
     </div>
 
-    <!-- Main Content -->
-    <div class="flex-1 p-8 overflow-auto">
-      <div class="flex items-center justify-between mb-6">
-        <h2 class="text-4xl font-bold">Welcome, {{ student.first_name }}</h2>
-      </div>
 
+<!-- Main Content -->
+<div class="flex-1 p-8 overflow-auto">
+  <div class="flex items-center justify-between mb-6">
+    <div>
+      <h2 class="text-4xl font-bold">Welcome, {{ student.first_name }}</h2>
+    </div>
+
+  </div>
+
+      
       <!-- Enrolled Courses -->
       <h3 class="text-2xl font-semibold mb-4">Your Courses</h3>
       {% if courses %}
