--- a/allim/allimApp/templates/teacher_dashboard.html
+++ b/allim/allimApp/templates/teacher_dashboard.html
@@ -44,7 +44,7 @@
             <a href="/delete_course/{{ course.id }}" class="bg-red-500 hover:bg-red-600 text-white px-3 py-1 rounded text-sm font-medium">
               Delete
             </a>
-            <a href="" class="bg-blue-500 hover:bg-blue-600 text-white px-3 py-1 rounded text-sm font-medium">
+            <a href="/add_lecture/{{course.id}}" class="bg-blue-500 hover:bg-blue-600 text-white px-3 py-1 rounded text-sm font-medium">
               Add Lecture
             </a>
           </div>
